--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.20.1",
     "express-stormpath": "^4.0.0",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-qr-scanner": "^1.0.0-alpha.11",
@@ -49,7 +50,6 @@
   },
   "devDependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "typescript": "^4.9.3"
+    "express": "^4.18.2"
   }
 }
